--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
       rel="stylesheet" />
 
     <link rel="stylesheet" href="../src/style.css" />
-
+    <script
+      src="https://kit.fontawesome.com/c340cf865b.js"
+      crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
   <body>
