--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <script
       src="https://kit.fontawesome.com/c340cf865b.js"
       crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>Star Wars Database</title>
   </head>
   <body>
     <div id="root"></div>
